--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,8 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.2",
     "@prisma/client": "^6.5.0",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
