--- a/api/package.json
+++ b/api/package.json
@@ -5,13 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsx build src/server.ts",
-    "start": "node dist/server.js",
+    "start": "tsx src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "init": "npx prisma migrate dev --name init",
-    "migrate": "npx prisma migrate deploy",
+    "init": "npx prisma migrate dev --name init && npx prisma migrate deploy && tsx src/server.ts",
+    "migrate": "npx prisma migrate deploy && tsx src/server.ts",
     "reset": "npx prisma migrate reset --force",
-    "generate": "npx prisma generate"
+    "generate": "npx prisma db push && npx prisma generate && npx prisma migrate dev --name init && npx prisma migrate deploy && tsx src/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +25,7 @@
     "@fastify/swagger": "^9.4.2",
     "@fastify/swagger-ui": "^5.2.2",
     "@prisma/client": "^6.5.0",
+    "prisma": "6.5.0",
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
     "winston": "^3.17.0",
