--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,6 @@
   "devDependencies": {
     "@types/node": "^22.13.11",
     "nodemon": "^3.1.9",
-    "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   },
   "dependencies": {
@@ -29,6 +28,7 @@
     "fastify": "^5.2.1",
     "fastify-type-provider-zod": "^4.0.2",
     "winston": "^3.17.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "tsx": "^4.19.3"
   }
 }
